# advent_of_code_2023

./: Makefile  pyproject.toml
src/: scratch_work.ipynb
src/solutions/day_1/: part_1.py  part_2.py
src/solutions/day_2/: part_1.py  part_2.py
src/solutions/day_3/: part_1.py  part_2.py
src/solutions/day_4/: part_1.py  part_2.py
src/solutions/day_5/: part_1.py
