[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = ""
authors = ["jameshamilton146"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
numpy = "^1.26.2"
requests = "^2.31.0"
black = "^23.11.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
